# console_bridge_vendor

./: 0001-Make-exported-target-use-CMAKE_INSTALL_INCLUDEDIR.patch  CHANGELOG.rst  CMakeLists.txt  QUALITY_DECLARATION.md  Quality_Declaration.md  console_bridge_vendor-extras.cmake  package.xml
benchmark/: benchmark_log.cpp
cmake/Modules/: Findconsole_bridge.cmake
test/benchmark/: benchmark_log.cpp
